Making sure the code still works with JDK 11